# gazebo-ros-test

./: CMakeLists.txt
launch/: spawn_box.launch.py
models/: empty.world  model.sdf  zed_camera.urdf
src/: spawn_box.cpp  spawn_camera.cpp
